--- a/src/lk/ijse/gdse66/hostel/view/login_form.fxml
+++ b/src/lk/ijse/gdse66/hostel/view/login_form.fxml
@@ -9,22 +9,50 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="root" prefHeight="741.0" prefWidth="1276.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.LoginFormController">
+<AnchorPane fx:id="root" prefHeight="741.0" prefWidth="1317.0" xmlns="http://javafx.com/javafx/8.0.171"
+            xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.LoginFormController">
     <children>
-        <JFXTextField fx:id="txtUserName" focusTraversable="false" layoutX="158.0" layoutY="337.0" prefHeight="31.0" prefWidth="311.0" promptText="User Name" />
-        <JFXPasswordField fx:id="txtPassword" focusTraversable="false" layoutX="158.0" layoutY="432.0" prefHeight="31.0" prefWidth="311.0" promptText="Password" />
-        <Label focusTraversable="false" layoutX="433.0" layoutY="98.0" text="Hostel Management System">
+        <ImageView fitHeight="741.0" fitWidth="1317.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@assets/images/login.jpg"/>
+            </image>
+        </ImageView>
+        <AnchorPane layoutX="59.0" layoutY="169.0" opacity="0.8" prefHeight="485.0" prefWidth="396.0"
+                    style="-fx-background-color: white; -fx-background-radius: 20px;">
+            <children>
+                <JFXTextField fx:id="txtUserName" focusTraversable="false" layoutX="40.0" layoutY="89.0"
+                              prefHeight="31.0" prefWidth="311.0" promptText="User Name"/>
+                <JFXPasswordField fx:id="txtPassword" focusTraversable="false" layoutX="43.0" layoutY="178.0"
+                                  prefHeight="31.0" prefWidth="311.0" promptText="Password"/>
+                <ImageView fitHeight="31.0" fitWidth="27.0" layoutX="324.0" layoutY="180.0"
+                           onMousePressed="#showPasswordOnAction" onMouseReleased="#hidePasswordOnAction"
+                           pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@assets/images/Show-Password.png"/>
+                    </image>
+                </ImageView>
+                <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="212.0" layoutY="310.0"
+                           onAction="#cancelOnAction" prefHeight="31.0" prefWidth="142.0"
+                           style="-fx-background-color: lightblue;" text="Cancel"/>
+                <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="43.0" layoutY="310.0"
+                           onAction="#loginOnAction" prefHeight="31.0" prefWidth="142.0"
+                           style="-fx-background-color: lightblue;" text="Log In"/>
+                <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="43.0" layoutY="373.0"
+                           onAction="#createAccountOnAction" prefHeight="31.0" prefWidth="311.0"
+                           style="-fx-background-color: lightblue;" text="Create an Account"/>
+            </children>
+        </AnchorPane>
+        <Label focusTraversable="false" layoutX="748.0" layoutY="168.0" prefHeight="41.0" prefWidth="442.0"
+               text="Hostel Management System">
             <font>
-                <Font size="35.0" />
+                <Font name="Arial" size="35.0"/>
             </font>
         </Label>
-        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="158.0" layoutY="515.0" onAction="#loginOnAction" prefHeight="31.0" prefWidth="142.0" style="-fx-background-color: lightblue;" text="Log In" />
-      <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="327.0" layoutY="515.0" onAction="#cancelOnAction" prefHeight="31.0" prefWidth="142.0" style="-fx-background-color: lightblue;" text="Cancel" />
-      <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="158.0" layoutY="585.0" onAction="#createAccountOnAction" prefHeight="31.0" prefWidth="311.0" style="-fx-background-color: lightblue;" text="Create an Account" />
-      <ImageView fitHeight="31.0" fitWidth="27.0" layoutX="442.0" layoutY="434.0" onMousePressed="#showPasswordOnAction" onMouseReleased="#hidePasswordOnAction" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@assets/images/Show-Password.png" />
-         </image>
-      </ImageView>
+        <ImageView fitHeight="105.0" fitWidth="102.0" layoutX="1201.0" layoutY="16.0" pickOnBounds="true"
+                   preserveRatio="true">
+            <image>
+                <Image url="@assets/images/logo.png"/>
+            </image>
+        </ImageView>
     </children>
 </AnchorPane>
