--- a/src/lk/ijse/gdse66/hostel/view/dashboard_form.fxml
+++ b/src/lk/ijse/gdse66/hostel/view/dashboard_form.fxml
@@ -2,22 +2,29 @@
 
 <?import com.jfoenix.controls.JFXButton?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="741.0" prefWidth="1276.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.DashboardFormController">
+<AnchorPane prefHeight="741.0" prefWidth="1317.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.DashboardFormController">
     <children>
+      <ImageView fitHeight="743.0" fitWidth="1323.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@assets/images/background.jpg" />
+         </image>
+      </ImageView>
         <Label focusTraversable="false" layoutX="643.0" layoutY="30.0" text="User Dashboard">
             <font>
                 <Font size="35.0" />
             </font>
         </Label>
-        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="65.0" layoutY="412.0" onAction="#reservationOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Reservation" textAlignment="CENTER" />
-        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="65.0" layoutY="306.0" onAction="#roomsOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Manage Rooms" textAlignment="CENTER" />
-        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="65.0" layoutY="523.0" onAction="#keyMoneyOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Key Money" textAlignment="CENTER" />
-        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="65.0" layoutY="639.0" onAction="#userOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Manage User" textAlignment="CENTER" />
-        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="65.0" layoutY="198.0" onAction="#studentsOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Manage Students" />
-        <Label fx:id="lblHeader" layoutX="276.0" layoutY="97.0" prefHeight="36.0" prefWidth="220.0" text="Welcome!">
+        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="50.0" layoutY="417.0" onAction="#reservationOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Reservation" textAlignment="CENTER" />
+        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="50.0" layoutY="312.0" onAction="#roomsOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Manage Rooms" textAlignment="CENTER" />
+        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="50.0" layoutY="530.0" onAction="#keyMoneyOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Key Money" textAlignment="CENTER" />
+        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="50.0" layoutY="637.0" onAction="#userOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Manage User" textAlignment="CENTER" />
+        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="50.0" layoutY="205.0" onAction="#studentsOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Manage Students" />
+        <Label fx:id="lblHeader" layoutX="258.0" layoutY="96.0" prefHeight="36.0" prefWidth="220.0" text="Welcome!">
             <font>
                 <Font size="23.0" />
             </font>
@@ -32,7 +39,14 @@
                 <Font size="20.0" />
             </font>
         </Label>
-        <AnchorPane fx:id="root" layoutX="276.0" layoutY="143.0" prefHeight="600.0" prefWidth="1000.0" style="-fx-background-color: lightgrey;" />
+        <AnchorPane fx:id="root" layoutX="258.0" layoutY="152.0" prefHeight="591.0" prefWidth="1063.0" style="-fx-background-color: lightgrey;">
+         <children>
+            <ImageView fitHeight="600.0" fitWidth="1063.0" layoutY="-7.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@assets/images/home.png" />
+               </image>
+            </ImageView>
+         </children></AnchorPane>
         <Label focusTraversable="false" layoutX="29.0" layoutY="41.0" text="Date : ">
             <font>
                 <Font size="20.0" />
