--- a/src/lk/ijse/gdse66/hostel/view/dashboard_form.fxml
+++ b/src/lk/ijse/gdse66/hostel/view/dashboard_form.fxml
@@ -7,52 +7,53 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="741.0" prefWidth="1317.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.DashboardFormController">
+<AnchorPane prefHeight="800.0" prefWidth="1400.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.DashboardFormController">
     <children>
-      <ImageView fitHeight="743.0" fitWidth="1323.0" pickOnBounds="true" preserveRatio="true">
-         <image>
-            <Image url="@assets/images/background.jpg" />
-         </image>
-      </ImageView>
-        <Label focusTraversable="false" layoutX="643.0" layoutY="30.0" text="User Dashboard">
+        <ImageView fitHeight="810.0" fitWidth="1422.0" pickOnBounds="true" preserveRatio="true">
+            <image>
+                <Image url="@assets/images/background.jpg" />
+            </image>
+        </ImageView>
+        <Label focusTraversable="false" layoutX="653.0" layoutY="31.0" text="Admin Dashboard">
             <font>
                 <Font size="35.0" />
             </font>
         </Label>
-        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="50.0" layoutY="417.0" onAction="#reservationOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Reservation" textAlignment="CENTER" />
-        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="50.0" layoutY="312.0" onAction="#roomsOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Manage Rooms" textAlignment="CENTER" />
-        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="50.0" layoutY="530.0" onAction="#keyMoneyOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Key Money" textAlignment="CENTER" />
-        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="50.0" layoutY="637.0" onAction="#userOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Manage User" textAlignment="CENTER" />
-        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="50.0" layoutY="205.0" onAction="#studentsOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Manage Students" />
-        <Label fx:id="lblHeader" layoutX="258.0" layoutY="96.0" prefHeight="36.0" prefWidth="220.0" text="Welcome!">
+        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="57.0" layoutY="447.0" onAction="#reservationOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Reservation" textAlignment="CENTER" />
+        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="57.0" layoutY="330.0" onAction="#roomsOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Manage Rooms" textAlignment="CENTER" />
+        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="57.0" layoutY="562.0" onAction="#keyMoneyOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Key Money" textAlignment="CENTER" />
+        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="57.0" layoutY="670.0" onAction="#userOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Manage User" textAlignment="CENTER" />
+        <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="57.0" layoutY="216.0" onAction="#studentsOnAction" prefHeight="31.0" prefWidth="160.0" style="-fx-background-color: lightblue;" text="Manage Students" />
+        <Label fx:id="lblHeader" layoutX="276.0" layoutY="94.0" prefHeight="36.0" prefWidth="220.0" text="Welcome!">
             <font>
                 <Font size="23.0" />
             </font>
         </Label>
-        <Label fx:id="lblDate" focusTraversable="false" layoutX="87.0" layoutY="41.0" prefHeight="30.0" prefWidth="116.0" text="2012/12/12">
+        <Label fx:id="lblDate" focusTraversable="false" layoutX="91.0" layoutY="41.0" prefHeight="30.0" prefWidth="116.0" text="2012/12/12">
             <font>
                 <Font size="20.0" />
             </font>
         </Label>
-        <Label fx:id="lblTime" focusTraversable="false" layoutX="1164.0" layoutY="41.0" prefHeight="30.0" prefWidth="102.0" text="12:12 PM">
+        <Label fx:id="lblTime" focusTraversable="false" layoutX="1292.0" layoutY="42.0" prefHeight="30.0" prefWidth="102.0" text="12:12 PM">
             <font>
                 <Font size="20.0" />
             </font>
         </Label>
-        <AnchorPane fx:id="root" layoutX="258.0" layoutY="152.0" prefHeight="591.0" prefWidth="1063.0" style="-fx-background-color: lightgrey;">
-         <children>
-            <ImageView fitHeight="600.0" fitWidth="1063.0" layoutY="-7.0" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@assets/images/home.png" />
-               </image>
-            </ImageView>
-         </children></AnchorPane>
-        <Label focusTraversable="false" layoutX="29.0" layoutY="41.0" text="Date : ">
+        <AnchorPane fx:id="root" layoutX="276.0" layoutY="152.0" prefHeight="621.0" prefWidth="1118.0" style="-fx-background-color: lightgrey;">
+            <children>
+                <ImageView fitHeight="630.0" fitWidth="1126.0" layoutX="-2.0" layoutY="-9.0" pickOnBounds="true" preserveRatio="true">
+                    <image>
+                        <Image url="@assets/images/login.jpg" />
+                    </image>
+                </ImageView>
+            </children>
+        </AnchorPane>
+        <Label focusTraversable="false" layoutX="34.0" layoutY="41.0" text="Date : ">
             <font>
                 <Font size="20.0" />
             </font>
         </Label>
-        <Label focusTraversable="false" layoutX="1105.0" layoutY="41.0" text="Time : ">
+        <Label focusTraversable="false" layoutX="1233.0" layoutY="41.0" text="Time : ">
             <font>
                 <Font size="20.0" />
             </font>
