--- a/src/lk/ijse/gdse66/hostel/view/dashboard_form.fxml
+++ b/src/lk/ijse/gdse66/hostel/view/dashboard_form.fxml
@@ -43,7 +43,7 @@
             <children>
                 <ImageView fitHeight="630.0" fitWidth="1126.0" layoutX="-2.0" layoutY="-9.0" pickOnBounds="true" preserveRatio="true">
                     <image>
-                        <Image url="@assets/images/login.jpg" />
+                        <Image url="@assets/images/home.jpg" />
                     </image>
                 </ImageView>
             </children>
