--- a/src/lk/ijse/gdse66/hostel/view/login_form.fxml
+++ b/src/lk/ijse/gdse66/hostel/view/login_form.fxml
@@ -13,7 +13,7 @@
     <children>
         <ImageView fitHeight="810.0" fitWidth="1422.0" pickOnBounds="true" preserveRatio="true">
             <image>
-                <Image url="@assets/images/login2.jpg" />
+                <Image url="@assets/images/login.jpg" />
             </image>
         </ImageView>
         <AnchorPane layoutX="59.0" layoutY="290.0" opacity="0.9" prefHeight="427.0" prefWidth="396.0" style="-fx-background-color: white; -fx-background-radius: 20px;">
