--- a/src/lk/ijse/gdse66/hostel/view/manage_rooms_form.fxml
+++ b/src/lk/ijse/gdse66/hostel/view/manage_rooms_form.fxml
@@ -7,23 +7,23 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.ManageRoomsFormController">
+<AnchorPane prefHeight="621.0" prefWidth="1118.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.ManageRoomsFormController">
     <children>
-        <JFXTextField fx:id="txtRoomId" editable="false" focusTraversable="false" layoutX="82.0" layoutY="47.0" promptText="Room ID" />
-        <JFXTextField fx:id="txtKeyMoney" focusTraversable="false" layoutX="82.0" layoutY="121.0" promptText="Key Money" />
-        <JFXTextField fx:id="txtQty" focusTraversable="false" layoutX="359.0" layoutY="121.0" promptText="Quantity" />
-        <JFXButton fx:id="btnAddNew" buttonType="RAISED" focusTraversable="false" layoutX="632.0" layoutY="47.0" onAction="#addNewOnAction" prefHeight="31.0" prefWidth="130.0" style="-fx-background-color: lightblue;" text="+ Add New" />
-        <JFXButton fx:id="btnSave" buttonType="RAISED" focusTraversable="false" layoutX="632.0" layoutY="121.0" onAction="#saveOnAction" prefHeight="31.0" prefWidth="130.0" style="-fx-background-color: lightblue;" text="Save" />
-        <JFXButton fx:id="btnDelete" buttonType="RAISED" focusTraversable="false" layoutX="822.0" layoutY="121.0" onAction="#deleteOnAction" prefHeight="31.0" prefWidth="130.0" style="-fx-background-color: lightblue;" text="Delete" />
-        <JFXTextField fx:id="txtSearch" focusTraversable="false" layoutX="822.0" layoutY="47.0" onAction="#searchOnAction" prefWidth="130.0" promptText="Search Here" />
-        <TableView fx:id="tblRoom" focusTraversable="false" layoutX="12.0" layoutY="186.0" prefHeight="400.0" prefWidth="976.0">
+        <JFXTextField fx:id="txtRoomId" editable="false" focusTraversable="false" layoutX="83.0" layoutY="47.0" prefWidth="170.0" promptText="Room ID" />
+        <JFXTextField fx:id="txtKeyMoney" focusTraversable="false" layoutX="83.0" layoutY="120.0" prefWidth="170.0" promptText="Key Money" />
+        <JFXTextField fx:id="txtQty" focusTraversable="false" layoutX="343.0" layoutY="120.0" prefWidth="170.0" promptText="Quantity" />
+        <JFXButton fx:id="btnAddNew" buttonType="RAISED" focusTraversable="false" layoutX="604.0" layoutY="47.0" onAction="#addNewOnAction" prefHeight="31.0" prefWidth="170.0" style="-fx-background-color: lightblue;" text="+ Add New" />
+        <JFXButton fx:id="btnSave" buttonType="RAISED" focusTraversable="false" layoutX="604.0" layoutY="120.0" onAction="#saveOnAction" prefHeight="31.0" prefWidth="170.0" style="-fx-background-color: lightblue;" text="Save" />
+        <JFXButton fx:id="btnDelete" buttonType="RAISED" focusTraversable="false" layoutX="863.0" layoutY="120.0" onAction="#deleteOnAction" prefHeight="31.0" prefWidth="170.0" style="-fx-background-color: lightblue;" text="Delete" />
+        <JFXTextField fx:id="txtSearch" focusTraversable="false" layoutX="863.0" layoutY="47.0" onAction="#searchOnAction" prefWidth="170.0" promptText="Search Here" />
+        <TableView fx:id="tblRoom" focusTraversable="false" layoutX="43.0" layoutY="207.0" prefHeight="380.0" prefWidth="1032.0">
             <columns>
-                <TableColumn editable="false" prefWidth="244.0" resizable="false" text="Room ID" />
-                <TableColumn editable="false" prefWidth="244.0" resizable="false" text="Room Type" />
-                <TableColumn editable="false" prefWidth="244.0" resizable="false" text="Key Money" />
-                <TableColumn editable="false" prefWidth="242.0" resizable="false" text="Quantity" />
+                <TableColumn editable="false" prefWidth="258.0" resizable="false" text="Room ID" />
+                <TableColumn editable="false" prefWidth="258.0" resizable="false" text="Room Type" />
+                <TableColumn editable="false" prefWidth="258.0" resizable="false" text="Key Money" />
+                <TableColumn editable="false" prefWidth="256.0" resizable="false" text="Quantity" />
             </columns>
         </TableView>
-      <JFXComboBox fx:id="cmbRoomType" layoutX="359.0" layoutY="47.0" prefHeight="31.0" prefWidth="169.0" promptText="Room Type" />
+      <JFXComboBox fx:id="cmbRoomType" layoutX="343.0" layoutY="47.0" prefHeight="31.0" prefWidth="170.0" promptText="Room Type" />
     </children>
 </AnchorPane>
