--- a/src/lk/ijse/gdse66/hostel/view/manage_students_form.fxml
+++ b/src/lk/ijse/gdse66/hostel/view/manage_students_form.fxml
@@ -8,27 +8,27 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.ManageStudentsFormController">
+<AnchorPane prefHeight="621.0" prefWidth="1118.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.ManageStudentsFormController">
     <children>
-        <JFXTextField fx:id="txtStudentId" editable="false" focusTraversable="false" layoutX="33.0" layoutY="41.0" promptText="Student ID" />
-        <JFXTextField fx:id="txtStudentName" focusTraversable="false" layoutX="243.0" layoutY="41.0" promptText="Student Name" />
-        <JFXTextField fx:id="txtContact" focusTraversable="false" layoutX="243.0" layoutY="120.0" promptText="Contact" />
-        <JFXTextField fx:id="txtAddress" focusTraversable="false" layoutX="33.0" layoutY="120.0" promptText="Address" />
-        <JFXButton fx:id="btnAddNew" buttonType="RAISED" focusTraversable="false" layoutX="660.0" layoutY="41.0" onAction="#addNewOnAction" prefHeight="31.0" prefWidth="130.0" style="-fx-background-color: lightblue;" text="+ Add New" />
-        <JFXButton fx:id="btnSave" buttonType="RAISED" focusTraversable="false" layoutX="660.0" layoutY="120.0" onAction="#saveOnAction" prefHeight="31.0" prefWidth="130.0" style="-fx-background-color: lightblue;" text="Save" />
-        <JFXButton fx:id="btnDelete" buttonType="RAISED" focusTraversable="false" layoutX="833.0" layoutY="120.0" onAction="#deleteOnAction" prefHeight="31.0" prefWidth="130.0" style="-fx-background-color: lightblue;" text="Delete" />
-        <JFXTextField fx:id="txtSearch" focusTraversable="false" layoutX="833.0" layoutY="41.0" onAction="#searchOnAction" prefHeight="31.0" prefWidth="130.0" promptText="Search Here" />
-        <TableView fx:id="tblStudent" fixedCellSize="0.0" focusTraversable="false" layoutX="12.0" layoutY="187.0" prefHeight="400.0" prefWidth="975.0">
+        <JFXTextField fx:id="txtStudentId" editable="false" focusTraversable="false" layoutX="41.0" layoutY="41.0" prefWidth="170.0" promptText="Student ID" />
+        <JFXTextField fx:id="txtStudentName" focusTraversable="false" layoutX="254.0" layoutY="41.0" prefWidth="170.0" promptText="Student Name" />
+        <JFXTextField fx:id="txtContact" focusTraversable="false" layoutX="254.0" layoutY="120.0" prefWidth="170.0" promptText="Contact" />
+        <JFXTextField fx:id="txtAddress" focusTraversable="false" layoutX="41.0" layoutY="120.0" prefWidth="170.0" promptText="Address" />
+        <JFXButton fx:id="btnAddNew" buttonType="RAISED" focusTraversable="false" layoutX="681.0" layoutY="41.0" onAction="#addNewOnAction" prefHeight="31.0" prefWidth="170.0" style="-fx-background-color: lightblue;" text="+ Add New" />
+        <JFXButton fx:id="btnSave" buttonType="RAISED" focusTraversable="false" layoutX="681.0" layoutY="113.0" onAction="#saveOnAction" prefHeight="31.0" prefWidth="170.0" style="-fx-background-color: lightblue;" text="Save" />
+        <JFXButton fx:id="btnDelete" buttonType="RAISED" focusTraversable="false" layoutX="901.0" layoutY="113.0" onAction="#deleteOnAction" prefHeight="31.0" prefWidth="170.0" style="-fx-background-color: lightblue;" text="Delete" />
+        <JFXTextField fx:id="txtSearch" focusTraversable="false" layoutX="901.0" layoutY="41.0" onAction="#searchOnAction" prefHeight="31.0" prefWidth="170.0" promptText="Search Here" />
+        <TableView fx:id="tblStudent" fixedCellSize="0.0" focusTraversable="false" layoutX="43.0" layoutY="207.0" prefHeight="380.0" prefWidth="1032.0">
             <columns>
-                <TableColumn editable="false" prefWidth="162.0" resizable="false" text="Student ID" />
-            <TableColumn editable="false" prefWidth="162.0" resizable="false" text="Student Name" />
-            <TableColumn editable="false" prefWidth="162.0" resizable="false" text="Gender" />
-            <TableColumn editable="false" prefWidth="162.0" resizable="false" text="Address" />
-            <TableColumn editable="false" prefWidth="162.0" resizable="false" text="Contact" />
-            <TableColumn editable="false" prefWidth="163.0" resizable="false" text="DOB" />
+                <TableColumn editable="false" prefWidth="171.0" resizable="false" text="Student ID" />
+            <TableColumn editable="false" prefWidth="171.0" resizable="false" text="Student Name" />
+            <TableColumn editable="false" prefWidth="171.0" resizable="false" text="Gender" />
+            <TableColumn editable="false" prefWidth="171.0" resizable="false" text="Address" />
+            <TableColumn editable="false" prefWidth="171.0" resizable="false" text="Contact" />
+            <TableColumn editable="false" prefWidth="175.0" resizable="false" text="DOB" />
             </columns>
         </TableView>
-        <JFXComboBox fx:id="cmbGender" focusTraversable="false" layoutX="449.0" layoutY="41.0" prefHeight="31.0" prefWidth="169.0" promptText="Gender" />
-        <JFXDatePicker fx:id="dpDOB" focusTraversable="false" layoutX="449.0" layoutY="120.0" prefHeight="31.0" prefWidth="169.0" promptText="Date of Birth" />
+        <JFXComboBox fx:id="cmbGender" focusTraversable="false" layoutX="465.0" layoutY="41.0" prefHeight="31.0" prefWidth="170.0" promptText="Gender" />
+        <JFXDatePicker fx:id="dpDOB" focusTraversable="false" layoutX="465.0" layoutY="120.0" prefHeight="31.0" prefWidth="170.0" promptText="Date of Birth" />
     </children>
 </AnchorPane>
