--- a/src/lk/ijse/gdse66/hostel/view/create_account_form.fxml
+++ b/src/lk/ijse/gdse66/hostel/view/create_account_form.fxml
@@ -4,22 +4,33 @@
 <?import com.jfoenix.controls.JFXComboBox?>
 <?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.CreateAccountFormController">
+<AnchorPane fx:id="root" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.CreateAccountFormController">
     <children>
-        <Label focusTraversable="false" layoutX="196.0" layoutY="29.0" text="Create New Account">
-            <font>
-                <Font size="23.0" />
-            </font>
-        </Label>
-        <JFXTextField fx:id="txtUserId" editable="false" focusTraversable="false" layoutX="79.0" layoutY="111.0" promptText="User ID" />
-        <JFXTextField fx:id="txtUserName" focusTraversable="false" layoutX="348.0" layoutY="111.0" promptText="User Name" />
-        <JFXTextField fx:id="txtAddress" focusTraversable="false" layoutX="348.0" layoutY="185.0" promptText="Address" />
-        <JFXTextField fx:id="txtContact" focusTraversable="false" layoutX="79.0" layoutY="264.0" promptText="Contact" />
-        <JFXTextField fx:id="txtPassword" focusTraversable="false" layoutX="348.0" layoutY="264.0" promptText="User Password" />
+      <AnchorPane prefHeight="50.0" prefWidth="600.0" style="-fx-background-color: black;">
+         <children>
+              <Label focusTraversable="false" layoutX="200.0" layoutY="7.0" text="Create New Account" textFill="WHITE">
+                  <font>
+                      <Font size="23.0" />
+                  </font>
+              </Label>
+            <ImageView fitHeight="30.0" fitWidth="30.0" layoutX="560.0" layoutY="10.0" onMouseClicked="#closeOnAction" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@assets/images/close.png" />
+               </image>
+            </ImageView>
+         </children>
+      </AnchorPane>
+        <JFXTextField fx:id="txtUserId" editable="false" focusTraversable="false" layoutX="79.0" layoutY="96.0" promptText="User ID" />
+        <JFXTextField fx:id="txtUserName" focusTraversable="false" layoutX="348.0" layoutY="96.0" promptText="User Name" />
+        <JFXTextField fx:id="txtAddress" focusTraversable="false" layoutX="348.0" layoutY="170.0" promptText="Address" />
+        <JFXTextField fx:id="txtContact" focusTraversable="false" layoutX="79.0" layoutY="249.0" promptText="Contact" />
+        <JFXTextField fx:id="txtPassword" focusTraversable="false" layoutX="348.0" layoutY="249.0" promptText="User Password" />
         <JFXButton buttonType="RAISED" focusTraversable="false" layoutX="222.0" layoutY="336.0" onAction="#createNewAccountOnAction" style="-fx-background-color: lightblue;" text="Create New Account" />
-        <JFXComboBox fx:id="cmbGender" focusTraversable="false" layoutX="79.0" layoutY="185.0" prefHeight="31.0" prefWidth="169.0" promptText="Gender" />
+        <JFXComboBox fx:id="cmbGender" focusTraversable="false" layoutX="79.0" layoutY="170.0" prefHeight="31.0" prefWidth="169.0" promptText="Gender" />
     </children>
 </AnchorPane>
