--- a/src/lk/ijse/gdse66/hostel/view/manage_keymoney_form.fxml
+++ b/src/lk/ijse/gdse66/hostel/view/manage_keymoney_form.fxml
@@ -5,16 +5,16 @@
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane prefHeight="600.0" prefWidth="1000.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.ManageKeymoneyFormController">
+<AnchorPane prefHeight="621.0" prefWidth="1118.0" style="-fx-background-color: white;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="lk.ijse.gdse66.hostel.controller.ManageKeymoneyFormController">
     <children>
-        <JFXTextField fx:id="txtSearch" focusTraversable="false" layoutX="816.0" layoutY="14.0" onAction="#searchOnAction" promptText="Serach Here" />
-        <TableView fx:id="tblReservation" focusTraversable="false" layoutX="12.0" layoutY="85.0" prefHeight="501.0" prefWidth="973.0">
+        <JFXTextField fx:id="txtSearch" focusTraversable="false" layoutX="906.0" layoutY="40.0" onAction="#searchOnAction" promptText="Serach Here" />
+        <TableView fx:id="tblReservation" focusTraversable="false" layoutX="43.0" layoutY="119.0" prefHeight="468.0" prefWidth="1032.0">
             <columns>
-                <TableColumn editable="false" prefWidth="195.0" resizable="false" text="Reserve ID" />
-                <TableColumn editable="false" prefWidth="195.0" resizable="false" text="Student ID" />
-                <TableColumn editable="false" prefWidth="195.0" resizable="false" text="Room ID" />
-                <TableColumn editable="false" prefWidth="195.0" resizable="false" text="Date" />
-                <TableColumn editable="false" prefWidth="191.0" resizable="false" text="Status" />
+                <TableColumn editable="false" prefWidth="206.0" resizable="false" text="Reserve ID" />
+                <TableColumn editable="false" prefWidth="206.0" resizable="false" text="Student ID" />
+                <TableColumn editable="false" prefWidth="206.0" resizable="false" text="Room ID" />
+                <TableColumn editable="false" prefWidth="206.0" resizable="false" text="Date" />
+                <TableColumn editable="false" prefWidth="206.0" resizable="false" text="Status" />
             </columns>
         </TableView>
     </children>
