--- a/src/lk/ijse/gdse66/hostel/view/login_form.fxml
+++ b/src/lk/ijse/gdse66/hostel/view/login_form.fxml
@@ -18,7 +18,7 @@
         </ImageView>
         <AnchorPane layoutX="83.0" layoutY="290.0" prefHeight="427.0" prefWidth="396.0" style="-fx-background-color: white; -fx-background-radius: 20px;">
             <children>
-                <JFXTextField fx:id="txtUserName" focusTraversable="false" layoutX="43.0" layoutY="60.0" prefHeight="31.0" prefWidth="311.0" promptText="User Name" />
+                <JFXTextField fx:id="txtUserName" focusTraversable="false" layoutX="43.0" layoutY="60.0" prefHeight="31.0" prefWidth="311.0" promptText="Username" />
                 <JFXPasswordField fx:id="txtPassword" focusTraversable="false" layoutX="43.0" layoutY="149.0" prefHeight="31.0" prefWidth="311.0" promptText="Password" />
                 <ImageView fitHeight="31.0" fitWidth="27.0" layoutX="318.0" layoutY="151.0" onMousePressed="#showPasswordOnAction" onMouseReleased="#hidePasswordOnAction" pickOnBounds="true" preserveRatio="true">
                     <image>
